[CORE] ArmorStandEditor 1.21.6-49 / 1.21.7-49 (#728)
* [CORE] Version bump to 1.21.6-48.4

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Add fix for Team Already Registered for InUse same as we do it for lockedTeam

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Make it so the size menu correctly works on one Stand instead of just checking for all of them. Fixes #720.

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Cleanup per SOnar

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Apply the same fixes as we did in Size Menu to PresetPoses - Also small code optimization.

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Bump to ASE 1.21.6-49_rc1 (Feature Changes...)

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Minor refactor of sending messages to a user who runs /ase stats
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Whitespace needs to be the same as the rest.
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Make it so that that size menu when using an item that has a SET Scalar Value to always start from 0 UNLESS when adding ,5 or ,1 to the Scalar Value

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Cleanup Imports. Ignoring Sonar atm for ChatColor - Will be fixed with Rewrite

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CI-SKIP] Whitespace Cleanup.

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Bump to 1.21.7

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Fix the case where `ase ` would result in the performCommand failing. Add a message to the Language file to say that clicking it will do nothing.

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE] Forgot to bump this to 1.21.7-49_rc2 WHOOPS.

Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>

* [CORE]